--- a/MY PORTFOLIO TEMPLATE (HTML CSS)/content.css
+++ b/MY PORTFOLIO TEMPLATE (HTML CSS)/content.css
@@ -5,6 +5,7 @@
     gap: 20px; 
     padding: 20px;
     
+    
 }
 
 .content-1, .content-2, .content-3, .content-4, .content-5, .content-6 {
@@ -17,6 +18,8 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.3s;
     gap: 20px;
+    margin-top: 15px;
+    margin-bottom: 15px;
   
 
 }
