--- a/profile.css
+++ b/profile.css
@@ -1,4 +1,26 @@
 
+.profile-content h1 {
+    margin: 0;
+    font-size: 24px;
+    color: #fff;
+    position: relative;
+    overflow: hidden;
+    white-space: nowrap;
+    border-right: 2px solid #fff; 
+    animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
+}
+
+@keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+}
+
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: #fff }
+}
+
+
 .profile-content {
     flex: 1;
 }
