--- a/MY CV TEMPLATE (HTML,CSS)/header.css
+++ b/MY CV TEMPLATE (HTML,CSS)/header.css
@@ -16,6 +16,9 @@ header p {
     font-size: 18px;
 }
 
+.dark-mode header{
+    background: linear-gradient(135deg, #2c3e50, #4a6491);
+}
 
 .dropdown {
     position: relative;
