--- a/body.css
+++ b/body.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background: linear-gradient(-45deg,#2f23d5, #8e66ea, #667eea,  #4d66d4,  #23d5ab,#d5d223,#d52323 );
+    background: linear-gradient(-45deg,#2f23d5, #6422fe, #455fd2,  #4d97d4,  #23d5ab,#d5d223,#d56723,#d52323 );
     background-size: 400% 400%;
     display: flex;
     justify-content: center;
