--- a/buttons.css
+++ b/buttons.css
@@ -49,3 +49,28 @@
     transform: translateY(0);
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
+.self-coded-btn {
+    background: linear-gradient(135deg, #1162cb, #25fc89);
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-radius: 25px;
+    
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 80%;
+    text-align: center;
+    display: block;
+}
+
+.self-coded-btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+}
+
+.self-coded-btn:active {
+    transform: translateY(1px);
+}
