--- a/CV/css/style.css
+++ b/CV/css/style.css
@@ -3,7 +3,7 @@
     --primary-color: #3498db;
     --secondary-color: #2c3e50;
     --accent-color: #e74c3c;
-    --light-color: #ecf0f1;
+    --light-color: #d0d0d0;
     --dark-color: #2c3e50;
     --text-color: #333;
     --text-light: #7f8c8d;
@@ -331,6 +331,7 @@ img {
 
 .timeline-date {
     position:relative;
+    margin-bottom: 5px;
     right: 0;
     top: 0;
     background-color: var(--primary-color);
