--- a/My Blogs/css/dark-mode.css
+++ b/My Blogs/css/dark-mode.css
@@ -2,7 +2,7 @@
 :root {
     --dark-bg: #121212;
     --dark-text: #e0e0e0;
-    --dark-primary: #bb86fc;
+    --dark-primary: #ade0ff;
     --dark-secondary: #03dac6;
     --dark-surface: #1e1e1e;
     --dark-error: #cf6679;
@@ -56,7 +56,7 @@
   
   .dark-mode .post,
   .dark-mode .sidebar-section {
-    background: linear-gradient(270deg, #2a2a4a, #282842 , #3a2a4a);
+    background: rgba(7, 0, 104, 0.776);
     color: var(--dark-text);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
   }
