--- a/My Blogs/css/main.css
+++ b/My Blogs/css/main.css
@@ -18,5 +18,21 @@
     }
 }
 
+.mobile-image {
+    display: none;
+}
+
+@media only screen and (max-width: 768px) {
+    .desktop-video {
+        display: none;
+    }
+    .mobile-image {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
 
 
