--- a/Portfolio/css/projects.css
+++ b/Portfolio/css/projects.css
@@ -96,8 +96,9 @@
     gap: 30px;
 }
 
-.project-card {
-    background-color: white;
+.project-card {  
+      background-color:  #b7dcdb;
+
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
